--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 pre-commit = "^3.3.3"
 django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.2.2"
+drf-nested-routers = "^0.93.4"
 
 
 [tool.poetry.group.dev.dependencies]
