--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,15 @@ pre-commit = "^3.3.3"
 django-filter = "^23.2"
 djangorestframework-simplejwt = "^5.2.2"
 drf-nested-routers = "^0.93.4"
+django-cors-headers = "^4.1.0"
+pillow = "^10.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 isort = "^5.12.0"
 black = "^23.3.0"
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core"]
