--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ djangorestframework-simplejwt = "^5.2.2"
 drf-nested-routers = "^0.93.4"
 django-cors-headers = "^4.1.0"
 pillow = "^10.0.0"
+gunicorn = "^20.1.0"
+django-redis = "^5.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
